backend/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-satoshi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-satoshi
  template:
    metadata:
      labels:
        app: backend-satoshi
    spec:
      containers:
      - name: backend-satoshi
        image: satoshisystems.azurecr.io/demo/backend-satoshi
        imagePullPolicy: Always
        ports:
        - containerPort: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: backend-satoshi-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3100
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3100
  selector:
    app: backend-satoshi
  externalIPs:
    - 52.152.253.141
