backend/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
      - backend.eastus.cloudapp.azure.com
      secretName: tls-secret-prd-backend
  rules:
  - host: backend.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: backend-satoshi-service
          servicePort: 80
        path: /
